Initiating Commit for Login Page and New User module